--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,126 @@
 :root {
   --purple-color: #733fc8;
+  --white-color: #ffffff;
+  --p-color: #cfcfcf;
+  --box2-color: #48556a;
 }
 
-.person1 {
+body {
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+/* same styles for main box's start*/
+
+.main_box .person1 {
+  display: flex;
+  flex-direction: column;
   width: 540px;
   height: 282px;
   border-radius: 8px;
-  -var {
-  }
+  background-color: var(--purple-color);
+}
+
+.person1 .user_box {
+  width: 121px;
+  height: 28px;
+  margin: 26px 0px 18px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img_box {
+  width: 28px;
+  height: 28px;
+}
+
+.user_box .user_name {
+  display: flex;
+  flex-direction: column;
+  margin-left: 17px;
+}
+
+.user_name h2 {
+  font-size: 13px;
+  font-weight: 500;
+  margin-bottom: 4px;
+  color: var(--white-color);
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+.user_name span {
+  font-size: 11px;
+  font-weight: 500;
+  color: var(--p-color);
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+.person1 .info_content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 32px;
+  margin-bottom: 16px;
+}
+
+.info_content .info_content_h1 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  color: var(--white-color);
+}
+
+.info_content .info_content_p {
+  margin-top: 16px;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 18px;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  color: var(--p-color);
+}
+
+/* same styles for main box's end*/
+
+.width_height_h1 {
+  width: 476px;
+  height: 72px;
+}
+
+.width_height_p {
+  width: 476px;
+  height: 90px;
+}
+
+.main_box .person2 {
+  display: flex;
+  flex-direction: column;
+  /* padding: 26px 32px 56px 32px; */
+  width: 255px;
+  height: 282px;
+  border-radius: 8px;
+  background-color: var(--box2-color);
+}
+.person2 .user_box2 {
+  width: 136px;
+  height: 28px;
+  margin: 26px 0px 18px 32px;
+  display: flex;
+}
+
+.user_name2 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.width_height_h1_jonathan {
+  width: 191px;
+  height: 72px;
+  margin-left: 32px;
+}
+
+.width_height_p_jonathan {
+  width: 191px;
+  height: 90px;
+  margin-left: 32px;
 }
