--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+  --body-Color: #ecf2f8;
   --purple-color: #733fc8;
   --white-color: #ffffff;
   --p-color: #cfcfcf;
@@ -6,7 +7,8 @@
 }
 
 body {
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  background-color: red;
 }
 
 /* same styles for main box's start*/
@@ -45,14 +47,14 @@ body {
   font-weight: 500;
   margin-bottom: 4px;
   color: var(--white-color);
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
 .user_name span {
   font-size: 11px;
   font-weight: 500;
   color: var(--p-color);
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
 .person1 .info_content {
@@ -66,7 +68,7 @@ body {
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   color: var(--white-color);
 }
 
@@ -75,7 +77,7 @@ body {
   font-size: 13px;
   font-weight: 500;
   line-height: 18px;
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: 'Barlow Semi Condensed', sans-serif;
   color: var(--p-color);
 }
 
@@ -101,7 +103,7 @@ body {
   background-color: var(--box2-color);
 }
 .person2 .user_box2 {
-  width: 136px;
+  width: 190px;
   height: 28px;
   margin: 26px 0px 18px 32px;
   display: flex;
